<resources>
    <string name="btnDbg">DBG</string>
    <string name="app_name">Comedores App</string>
    <string name="login">Entrar</string>
    <string name="comedoresApp">Comedores App</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="nombreResponsable">Nombre del Responsable</string>
    <string name="dni">Dni</string>
    <string name="repita_password">Repita la contraseña</string>
    <string name="direccion">Direccion</string>
    <string name="localidad">Localidad</string>
    <string name="provincia">Provincia</string>
    <string name="telefono">Teléfono</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="alta_usuario">Nuevo Usuario</string>
    <string name="btnSiguiente">Siguiente</string>
    <string name="btnFinalizar">Finalizar</string>
    <string name="btnAtras">Atras</string>
    <string name="btnAgregar">Agregar Comedor</string>
    <string name="control_de_cuentas">Control de cuentas</string>
    <string name="reportes">Reportes</string>
    <string name="usuario_final">Principal Usuario Final</string>
    <string name="admin_comedor">Principal Admin Comedor</string>
    <string name="supervisor">Principal Supervidor</string>
    <string name="title_activity_principal_comedor_admin">PrincipalComedorAdmin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Cerrar sesion</string>
    <string name="tvEstado">Estado</string>
    <string name="menu_principal">Principal</string>
    <string name="menu_mis_necesidades">Mis Necesidades</string>

    <string name="titulo_admin">Principal Administrador</string>
    <string name="titulo_mis_necesidades">Mis Necesidades</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="avatar">Avatar usuario</string>
    <string name="update">Actualizar</string>
    <string name="title_activity_buscar_comedor">BuscarComedor</string>
    <string name="title_activity_buscar_comedor_map">BuscarComedorMap</string>

    <string name="btn_ver">Ver</string>
    <string name="title_activity_base_comedores">BaseComedores</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_principal_usuario">PrincipalUsuario</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

</resources>