<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/layoutLogin"
        android:layout_width="409dp"
        android:layout_height="497dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/comedoresApp"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="34sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etCorreo"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:ems="10"
            android:hint="@string/correo_electronico"
            android:inputType="textPersonName"
            android:padding="20dp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPersonName"
            android:padding="20dp"
            android:password="true" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="240dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:text="@string/login" />

        <Button
            android:id="@+id/btnRegistrarse"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:text="@string/registrarse" />

    </LinearLayout>

    <Button
        android:id="@+id/btnDebug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="316dp"
        android:layout_marginTop="4dp"
        android:text="@string/btnDbg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>